--- a/src/app/formularioregistro/formularioregistro.component.html
+++ b/src/app/formularioregistro/formularioregistro.component.html
@@ -1,4 +1,4 @@
-<form class="w-100 my-5">
+<form class="w-100 my-5" [formGroup]="formulario" (ngSubmit)="analizarFormulario()">
 
     <div class="mb-5">
         <h3>Ingreso mercancia a cuarto de solución:</h3>
@@ -12,15 +12,17 @@
             <span class="input-group-text">
                 <i class="bi bi-box-seam-fill"></i>
             </span>
-            <input type="text" class="form-control" placeholder="IUP">
+            <input type="text" class="form-control" placeholder="IUP" formControlName="iup">
         </div>
+        <div *ngIf="formulario.get('iup')?.touched && formulario.get('iup')?.errors?.['required']" class="form-text text-danger fw-bold">Este campo es obligatorio</div>
+        <div *ngIf="formulario.get('iup')?.touched && formulario.get('iup')?.errors?.['minlength']" class="form-text text-danger fw-bold">Este campo debe tener al menos 6 caractéres</div>
     </div>
 
     <div class="mb-3 mt-5">
         <h4>Remitente: </h4>
         <hr>
         <label class="form-label">Tipo de remitente: </label>
-        <input type="text" class="form-control" placeholder="TipoRemitente">
+        <input type="text" class="form-control" placeholder="TipoRemitente" formControlName="tiporemitente">
     </div>
 
     <div class="mb-3">
@@ -30,7 +32,7 @@
                     <span class="input-group-text">
                         <i class="bi bi-key"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="identificación">
+                    <input type="text" class="form-control" placeholder="identificación" formControlName="idremitente">
                 </div>
             </div>
             <div class="col-6">
@@ -38,7 +40,7 @@
                     <span class="input-group-text">
                         <i class="bi bi-person-circle"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Nombre">
+                    <input type="text" class="form-control" placeholder="Nombre" formControlName="nombreremitente">
                 </div>
             </div>
         </div>
@@ -47,10 +49,10 @@
     <div class="mb-3">
         <div class="row">
             <div class="col-6">
-                <input type="text" class="form-control" placeholder="departamento">
+                <input type="text" class="form-control" placeholder="departamento" formControlName="deptoremitente">
             </div>
             <div class="col-6">
-                <input type="text" class="form-control" placeholder="municipio">
+                <input type="text" class="form-control" placeholder="municipio" formControlName="municipioremitente">
             </div>
         </div>
     </div>
@@ -60,7 +62,7 @@
             <span class="input-group-text">
                 <i class="bi bi-geo-alt"></i>
             </span>
-            <input type="text" class="form-control" placeholder="Dirección">
+            <input type="text" class="form-control" placeholder="Dirección" formControlName="direccionremitente">
         </div>
     </div>
 
@@ -68,7 +70,7 @@
         <h4>Destinatario: </h4>
         <hr>
         <label class="form-label">Tipo de Destinatario: </label>
-        <input type="text" class="form-control" placeholder="TipoDestinatario">
+        <input type="text" class="form-control" placeholder="TipoDestinatario" formControlName="tipodestinatario">
     </div>
 
     <div class="mb-3">
@@ -78,7 +80,7 @@
                     <span class="input-group-text">
                         <i class="bi bi-key"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="identificación">
+                    <input type="text" class="form-control" placeholder="identificación" formControlName="iddestinatario">
                 </div>
             </div>
             <div class="col-6">
@@ -86,7 +88,7 @@
                     <span class="input-group-text">
                         <i class="bi bi-person-circle"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Nombre">
+                    <input type="text" class="form-control" placeholder="Nombre" formControlName="nombredestinatario">
                 </div>
             </div>
         </div>
@@ -95,10 +97,10 @@
     <div class="mb-3">
         <div class="row">
             <div class="col-6">
-                <input type="text" class="form-control" placeholder="Departamento">
+                <input type="text" class="form-control" placeholder="Departamento" formControlName="deptodestinatario">
             </div>
             <div class="col-6">
-                <input type="text" class="form-control" placeholder="Municipio">
+                <input type="text" class="form-control" placeholder="Municipio" formControlName="municipiodestinatario">
             </div>
         </div>
     </div>
@@ -108,7 +110,7 @@
             <span class="input-group-text">
                 <i class="bi bi-geo-alt"></i>
             </span>
-            <input type="text" class="form-control" placeholder="Dirección">
+            <input type="text" class="form-control" placeholder="Dirección" formControlName="direcciondestinatario">
         </div>
     </div>
 
