--- a/src/app/formularioregistro/formularioregistro.component.html
+++ b/src/app/formularioregistro/formularioregistro.component.html
@@ -117,11 +117,10 @@
     <div class="mb-3 mt-5">
         <h4>Ubicación en cuarto: </h4>
         <hr>
-        <select class="form-select">
-            <option selected>Zona: </option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+        <select class="form-select" *ngIf="controlDeZona">
+            <option selected>Seleccion una Zona: </option>
+            <option value="" *ngFor="let zona of datosZonas">{{zona.nombre}}</option>
+
         </select>
     </div>
 
