--- a/src/app/formularioregistro/formularioregistro.component.html
+++ b/src/app/formularioregistro/formularioregistro.component.html
@@ -117,9 +117,8 @@
     <div class="mb-3 mt-5">
         <h4>Ubicación en cuarto: </h4>
         <hr>
-        <select class="form-select" *ngIf="controlDeZona">
-            <option selected>Seleccion una Zona: </option>
-            <option value="" *ngFor="let zona of datosZonas">{{zona.nombre}}</option>
+        <select class="form-select" *ngIf="controlDeZona" formControlName="zona">
+            <option value={{zona.id}} *ngFor="let zona of datosZonas">{{zona.nombre}}</option>
 
         </select>
     </div>
