--- a/src/app/formularioregistro/formularioregistro.component.html
+++ b/src/app/formularioregistro/formularioregistro.component.html
@@ -1,4 +1,4 @@
-<form class="w-100 my-5" [formGroup]="formulario" (ngSubmit)="analizarFormulario()">
+<form class="formulario my-5" [formGroup]="formulario" (ngSubmit)="analizarFormulario()">
 
     <div class="mb-5">
         <h3>Ingreso mercancia a cuarto de solución:</h3>
