--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,13 +9,13 @@
         <div class="col-6">
             <div class="row">
               <div class="col-12">
-                <h2>Disponibilidad:</h2>
-                <app-grafica></app-grafica>
+                <h2 class="mt-4 text-center">Disponibilidad</h2>
+                <app-grafica class="mx-5 d-block m-xxl-auto "></app-grafica>
               </div>
             </div>
             <div class="row">
               <div class="col-12">
-                <h2>Mercancias en cuarto:</h2>
+                <h2 class="mt-4 text-center">Mercancias en cuarto</h2>
                 <div class="row row-cols-1 row-cols-md-2 g-3" *ngFor="let dato of datosZonas">
                   <div class="col my-3" *ngFor="let mercancia of dato.mercancias">
                     <div class="card h-100">
