Se crea pagina de mercancias y estilos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <app-menu></app-menu>
-
-<div class="container-fluid mt-3">
+<br><br>
+<div class="container-fluid mt-5">
     <div class="row">
         <div class="col-6">
             <app-formularioregistro></app-formularioregistro>
@@ -15,8 +15,8 @@
             </div>
             <div class="row">
               <div class="col-12">
-                <h2 class="mt-4 text-center">Mercancias en cuarto</h2>
-                <div class="row row-cols-1 row-cols-md-2 g-3" *ngFor="let dato of datosZonas">
+                <h2 class="mt-4 text-center my-5">Mercancias en cuarto</h2>
+                <div class="row row-cols-1 row-cols-md-2 g-3 my-3" *ngFor="let dato of datosZonas">
                   <div class="col my-3" *ngFor="let mercancia of dato.mercancias">
                     <div class="card h-100">
 
@@ -24,13 +24,13 @@
                       <h2 class="text-center text-muted">{{mercancia.nombre}}</h2>
                       <h3 class="text-center text-muted">volumen ocupado:{{mercancia.volumen}} u3</h3>
                       <h2 class="text-center text-muted">IUP:{{mercancia.iup}}</h2>
-                      <button (click)="retirarMercancia(mercancia.iup)" class="btn btn-primary m-2" type="button">Retirar del cuarto</button>
+                      <button (click)="retirarMercancia(mercancia.iup)" class="btn btn-warning m-2 boton" type="button">Retirar del cuarto</button>
 
                     </div>
-
                   </div>
                 </div>
               </div>
+              <a routerLink="/mercancia" class="btn btn-warning mx-auto d-block w-50">Ver más informacion</a>
             </div>
         </div>
     </div>
@@ -38,3 +38,4 @@
 </div>
 
 
+<app-footer></app-footer>
