--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,9 +1,9 @@
 <header>
-    <nav class="navbar navbar-expand-lg menu navbar-dark">
+    <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top">
         <div class="container-fluid">
             
             <a class="navbar-brand" routerLink="/">
-                TCC
+                <img src="../../../assets/logo.jpeg" alt="" class="logo">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
